--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/LucasKoval/CH-Login-Form#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "socket.io": "^4.4.1"
   }
 }
